--- a/vignettes/bvar.Rmd
+++ b/vignettes/bvar.Rmd
@@ -87,6 +87,13 @@ eps <- 1e-04
 (fit_bvar <- bvar_minnesota(etf_train, p, sig, lam, delta, eps))
 ```
 
+## Posterior Distribution
+
+```{r}
+est_bvar <- gen_posterior(fit_bvar, 2)
+```
+
+
 ## Forecasting
 
 ```{r}
@@ -108,6 +115,10 @@ mse_var <- apply(etf_test - pred_var, 2, function(x) mean(x^2))
 fit_har <- vhar_lm(etf_train)
 pred_har <- predict(fit_har, h)
 mse_har <- apply(etf_test - pred_har, 2, function(x) mean(x^2))
+# BVHAR-----------------------
+fit_bvhar <- bvhar_minnesota(etf_train, sig, lam, delta, eps)
+pred_bvhar <- predict(fit_bvhar, h)
+mse_bvhar <- apply(etf_test - pred_bvhar, 2, function(x) mean(x^2))
 ```
 
 MSE:
@@ -119,6 +130,8 @@ mean(mse_var)
 mean(mse_har)
 # BVAR------------
 mean(mse_bvar)
+# BVHAR-----------
+mean(mse_bvhar)
 ```
 
 # Ghosh Prior
@@ -127,7 +140,7 @@ mean(mse_bvar)
 
 ```{r}
 set.seed(1)
-U <- runif(1, 0, 10) * diag(m * p + 1) # identity matrix
+U <- runif(1, 0, 10) * diag(m * p + 1) # c * I
 (fit_ghosh <- bvar_ghosh(etf_train, p, U))
 ```
 
@@ -148,6 +161,8 @@ mean(mse_var)
 mean(mse_har)
 # Minnesota-------
 mean(mse_bvar)
+# BVHAR-----------
+mean(mse_bvhar)
 # Ghosh-----------
 mean(mse_ghosh)
 ```
