--- a/vignettes/bvar.Rmd
+++ b/vignettes/bvar.Rmd
@@ -1,6 +1,25 @@
 ---
 title: "Introduction to BVAR"
 output: rmarkdown::html_vignette
+header-includes:
+- \newcommand{\R}{\mathbb{R}}
+- \newcommand{\B}{\boldsymbol\beta}
+- \newcommand{\hb}{\boldsymbol{\hat\beta}}
+- \newcommand{\E}{\boldsymbol\epsilon}
+- \DeclareMathOperator*{\argmin}{argmin}
+- \DeclareMathOperator*{\argmax}{argmax}
+- \newcommand{\defn}{\mathpunct{:}=}
+- \newcommand{\X}{\mathbf{X}}
+- \newcommand{\Y}{\mathbf{Y}}
+- \newcommand{\by}{\mathbf{y}}
+- \newcommand{\bz}{\mathbf{Z}}
+- \newcommand{\ba}{\boldsymbol{\alpha}}
+- \newcommand{\bc}{\mathbf{c}}
+- \newcommand{\bu}{\mathbf{u}}
+- \def\Cov{\mathrm{Cov}}
+- \def\Var{\mathrm{Var}}
+- \def\Corr{\mathrm{Corr}}
+- \def\vec{\mathrm{vec}}
 vignette: >
   %\VignetteIndexEntry{Introduction to BVAR}
   %\VignetteEngine{knitr::rmarkdown}
@@ -67,18 +86,39 @@ m <- ncol(etf)
 
 # Minnesota Prior
 
+- Litterman (1986) and Bańbura et al. (2010)
+- All the equations are centered around the random walk with drift.
+- *Prior mean*: Recent lags provide more reliable information than the more distant ones.
+- *Prior variance*: Own lags explain more of the variation of a given variable than the lags of other variables in the equation.
+
 ## Fit
 
 ```{r bvarlag}
 bvar_lag <- 5
 ```
 
-Simple setting:
+Set Minnesota parameters.
+
+- `sigma`: Vector $\sigma_1, \ldots, \sigma_m$
+    - $\Sigma_e = diag(\sigma_1^2, \ldots, \sigma_m^2)$
+    - $\sigma_i^2 / \sigma_j^2$: different scale and variability of the data
+- `lambda`
+    - Controls the overall tightness of the prior distribution around the RW or WN
+    - Governs the relative importance of the prior beliefs w.r.t. the information contained in the data
+        - If $\lambda = 0$, then posterior = prior and the data do not influence the estimates.
+        - If $\lambda = \infty$, then posterior expectations = OLS.
+    - Choose in relation to the size of the system (Bańbura et al. (2010))
+        - As `m` increases, $\lambda$ should be smaller to avoid overfitting (De Mol et al. (2008))
+- `delta`: Persistence
+    - Litterman (1986) originally sets high persistence $\delta_i = 1$
+    - For Non-stationary variables: random walk prior $\delta_i = 1$
+    - For stationary variables: white noise prior $\delta_i = 0$
+- `eps`: Very small number to make matrix invertible
 
 ```{r minnesotaset}
-lam <- .5 # lambda
-delta <- rep(1, m) # delta vector
 sig <- apply(etf_train, 2, sd) # sigma vector
+lam <- .2 # lambda
+delta <- rep(0, m) # delta vector (0 vector since RV stationary)
 eps <- 1e-04 # very small number
 ```
 
@@ -156,9 +196,12 @@ mean(mse_bvhar)
 
 ## Fit
 
+If you set $U = cI_k$, posterior mean is equivalent to ridge estimator.
+Ghosh et al. (2018) had chosen a value from `[0, 10]` using deviance information criteria (DIC).
+Its selection might be the user's decision.
+
 ```{r}
-set.seed(1)
-U <- runif(1, 0, 10) * diag(m * bvar_lag + 1) # c * I
+U <- 5000 * diag(m * bvar_lag + 1) # c * I
 (fit_ghosh <- bvar_ghosh(etf_train, bvar_lag, U))
 ```
 
