--- a/vignettes/var.Rmd
+++ b/vignettes/var.Rmd
@@ -43,7 +43,7 @@ options(digits = 3)
 library(bvhar)
 ```
 
-```{r addpkgs}
+```{r addpkgs, message=FALSE}
 # for this vignette--------------
 library(dplyr)
 ```
@@ -91,6 +91,12 @@ m <- ncol(etf)
 
 # VAR
 
+This package indentifies VAR(p) model by
+
+$$\Y_t = \bc + B_1 \Y_{t - 1} + \ldots + \B_p +\Y_{t - p} + \E_t$$
+
+where $\E_t \sim N(\mathbf{0}_k, \Sigma_e)$
+
 ## Fit
 
 ```{r varlag}
@@ -109,9 +115,12 @@ Y_0 = \begin{bmatrix}
   \by_{p + 2}^T \\
   \vdots \\
   \by_n^T
-\end{bmatrix}_{s \times m} \equiv Y_{p + 1}
+\end{bmatrix}_{s \times m} \equiv Y_{p + 1} \in \R^{s \times m}
 $$
 
+by `build_y0()`
+
+and
 
 $$
 X_0 = \left[\begin{array}{c|c|c|c}
@@ -121,8 +130,10 @@ X_0 = \left[\begin{array}{c|c|c|c}
   \by_{n - 1}^T & \cdots & \by_{n - p}^T & 1
 \end{array}\right]_{s \times k} = \begin{bmatrix}
   Y_p & Y_{p - 1} & \cdots & \mathbf{1}_{n - p}
-\end{bmatrix}
+\end{bmatrix} \in \R^{s \times k}
 $$
+
+by `build_design()`. Then
 
 ```{r}
 (fit_var <- var_lm(etf_train, var_lag))
@@ -137,7 +148,9 @@ class(fit_var)
 names(fit_var)
 ```
 
-You can see the estimate for
+### Coefficient matrices
+
+You can see the estimate for coefficient matrix of the form
 
 $$
 B = \begin{bmatrix}
@@ -145,27 +158,31 @@ B = \begin{bmatrix}
   \vdots \\
   B_p^T \\
   \bc^T
-\end{bmatrix}
+\end{bmatrix} \in \R^{k \times m}
 $$
 
-You can extract the values such as
-
-Coefficient matrices: $\hat{B}$ corresponding to the above form.
+Extract $\hat{B}$ corresponding to the above form:
 
 ```{r}
 coef(fit_var)
 ```
 
-Fitted values: $\hat{Y}_0 = X_0 \hat{B}$
+### Fitted values
+
+$\hat{Y}_0 = X_0 \hat{B}$:
 
 ```{r}
-fitted(fit_var) %>% head()
+fitted(fit_var) %>% 
+  head()
 ```
 
-Residuals: $Y_0 - X_0 \hat{B}$
+### Residuals
+
+$Y_0 - X_0 \hat{B}$:
 
 ```{r}
-resid(fit_var) %>% head()
+resid(fit_var) %>% 
+  head()
 ```
 
 ## Summary
@@ -197,7 +214,66 @@ Compute MSE as follow:
 
 # VHAR
 
-Consider Vector HAR (VHAR) model. The process is the same.
+Consider Vector HAR (VHAR) model.
+
+$$\Y_t = \bc + \Phi^{(d)} + \Y_{t - 1} + \Phi^{(w)} \Y_{t - 1}^{(w)} + \Phi^{(m)} \Y_{t - 1}^{(m)} + \E_t$$
+
+where $\Y_t$ is daily RV and
+
+$$\Y_t^{(w)} = \frac{1}{5} \left( \Y_t + \cdots + \Y_{t - 4} \right)$$
+
+is weekly RV
+
+and
+
+$$\Y_t^{(m)} = \frac{1}{22} \left( \Y_t + \cdots + \Y_{t - 21} \right)$$
+
+is monthly RV. This model can be expressed by
+
+$$Y_0 = X_1 \Phi + Z$$
+
+where
+
+$$
+\Phi = \begin{bmatrix}
+  \Phi^{(d)T} \\
+  \Phi^{(w)T} \\
+  \Phi^{(m)T} \\
+  \bc^T
+\end{bmatrix} \in \R^{(3m + 1) \times m}
+$$
+
+Let $T$ be
+
+$$
+T \defn \begin{bmatrix}
+  1 & 0 & \cdots & 0 & 0 & \cdots & 0 \\
+  1 / 5 & 1 / 5 & \cdots & 1 / 5 & 0 & \cdots & 0 \\
+  1 / 22 & 1 / 22 & \cdots & 1 / 22 & 1 / 22 & \cdots & 1 / 22
+\end{bmatrix} \otimes I_m \in \R^{3m \times 22m}
+$$
+
+and let $\widetilde{T}$ be
+
+$$
+\widetilde{T} \defn \left[\begin{array}{c|c}
+  T & \mathbf{0}_{3m} \\ \hline
+  \mathbf{0}_{3m}^T & 1
+\end{array}\right] \in \R^{(3m + 1) \times (22m + 1)}
+$$
+
+Then for $X_0$ in VAR(p),
+
+$$
+X_1 = X_0 \widetilde{T}^T = \begin{bmatrix}
+  \by_{22}^T & \by_{22}^{(w)T} & \by_{22}^{(m)T} & 1 \\
+  \by_{23}^T & \by_{23}^{(w)T} & \by_{23}^{(m)T} & 1 \\
+  \vdots & \vdots & \vdots & \vdots \\
+  \by_{n - 1}^T & \by_{n - 1}^{(w)T} & \by_{n - 1}^{(m)T} & 1
+\end{bmatrix} \in \R^{s \times (3m + 1)}
+$$
+
+This package fits VHAR by scaling VAR(p) using $\widetilde{T}$ (`scale_har(m)`).
 
 ## Fit
 
@@ -206,6 +282,8 @@ Consider Vector HAR (VHAR) model. The process is the same.
 ```
 
 ## Forecasting
+
+VHAR also follows `varlse` basically. Use `predict` method with `n.ahead` option.
 
 ```{r}
 (pred_har <- predict(fit_har, n.ahead = h))
