--- a/vignettes/bvar.Rmd
+++ b/vignettes/bvar.Rmd
@@ -155,28 +155,29 @@ autoplot(est_bvar, "GVZCLS")
 ## Forecasting
 
 ```{r}
-(pred_bvar <- predict(fit_bvar, h))
+pred_bvar <- predict(fit_bvar, h)
+(pred_bvarmat <- pred_bvar$forecast)
 ```
 
 ```{r}
-(mse_bvar <- apply(etf_test - pred_bvar, 2, function(x) mean(x^2)))
+(mse_bvar <- apply(etf_test - pred_bvarmat, 2, function(x) mean(x^2)))
 ```
 
 Compare:
 
 ```{r}
-# VAR-------------------------
+# VAR----------------------------
 fit_var <- var_lm(etf_train, bvar_lag)
-pred_var <- predict(fit_var, h)
-mse_var <- apply(etf_test - pred_var, 2, function(x) mean(x^2))
-# VHAR------------------------
+pred_varmat <- predict(fit_var, h)$forecast
+mse_var <- apply(etf_test - pred_varmat, 2, function(x) mean(x^2))
+# VHAR---------------------------
 fit_har <- vhar_lm(etf_train)
-pred_har <- predict(fit_har, h)
-mse_har <- apply(etf_test - pred_har, 2, function(x) mean(x^2))
-# BVHAR-----------------------
-fit_bvhar <- bvhar_minnesota(etf_train, sig, lam, delta, eps)
-pred_bvhar <- predict(fit_bvhar, h)
-mse_bvhar <- apply(etf_test - pred_bvhar, 2, function(x) mean(x^2))
+pred_harmat <- predict(fit_har, h)$forecast
+mse_har <- apply(etf_test - pred_harmat, 2, function(x) mean(x^2))
+# BVHAR (original Minnesota)-----
+fit_bvhar <- bvhar_minnesota(etf_train, sigma = sig, lambda = lam, delta = delta, eps = eps)
+pred_bvharmat <- predict(fit_bvhar, h)$forecast
+mse_bvhar <- apply(etf_test - pred_bvharmat, 2, function(x) mean(x^2))
 ```
 
 MSE:
@@ -208,11 +209,12 @@ U <- 5000 * diag(m * bvar_lag + 1) # c * I
 ## Forecasting
 
 ```{r}
-(pred_ghosh <- predict(fit_ghosh, h))
+pred_ghosh <- predict(fit_ghosh, h)
+(pred_ghoshmat <- pred_ghosh$forecast)
 ```
 
 ```{r}
-(mse_ghosh <- apply(etf_test - pred_ghosh, 2, function(x) mean(x^2)))
+(mse_ghosh <- apply(etf_test - pred_ghoshmat, 2, function(x) mean(x^2)))
 ```
 
 ```{r}
