--- a/README.Rmd
+++ b/README.Rmd
@@ -9,7 +9,10 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   fig.path = "man/figures/README-",
-  out.width = "100%"
+  out.width = "70%",
+  fig.align = "center",
+  fig.width = 6,
+  fig.asp = .618
 )
 ```
 
@@ -46,6 +49,7 @@ remotes::install_github("ygeunkim/bvhar")
 ```{r example, message=FALSE}
 library(bvhar)
 library(dplyr)
+library(ggplot2)
 ```
 
 ### VAR
@@ -61,22 +65,22 @@ etf_tr <-
 etf_te <- setdiff(etf_vix, etf_tr)
 ```
 
-VAR(5):
+VAR(1):
 
 ```{r}
-mod_var <- var_lm(etf_tr, 5)
+mod_var <- var_lm(etf_tr, 1)
 ```
 
 Forecasting:
 
 ```{r}
-forecast_var <- predict(mod_var, h)$forecast
+forecast_var <- predict(mod_var, h)
 ```
 
 MSE:
 
 ```{r}
-(msevar <- apply(etf_te - forecast_var, 2, function(x) mean(x^2)))
+(msevar <- mse(forecast_var, etf_te))
 ```
 
 ### VHAR
@@ -88,8 +92,8 @@ mod_vhar <- vhar_lm(etf_tr)
 MSE:
 
 ```{r}
-forecast_vhar <- predict(mod_vhar, h)$forecast
-(msevhar <- apply(etf_te - forecast_vhar, 2, function(x) mean(x^2)))
+forecast_vhar <- predict(mod_vhar, h)
+(msevhar <- mse(forecast_vhar, etf_te))
 ```
 
 ### BVAR
@@ -110,24 +114,70 @@ mod_bvar <- bvar_minnesota(etf_tr, 5, sig, lam, delta, eps)
 MSE:
 
 ```{r}
-forecast_bvar <- predict(mod_bvar, h)$forecast
-(msebvar <- apply(etf_te - forecast_bvar, 2, function(x) mean(x^2)))
+forecast_bvar <- predict(mod_bvar, h)
+(msebvar <- mse(forecast_bvar, etf_te))
 ```
 
 ### BVHAR
 
+Minnesota-v1:
+
 ```{r}
-mod_bvhar <- bvhar_minnesota(etf_tr, sigma = sig, lambda = lam, delta = delta, eps = eps)
+mod_bvhar_v1 <- bvhar_minnesota(etf_tr, sigma = sig, lambda = lam, delta = delta, eps = eps)
 ```
 
 MSE:
 
 ```{r}
-forecast_bvhar <- predict(mod_bvhar, h)$forecast
-(msebvhar <- apply(etf_te - forecast_bvhar, 2, function(x) mean(x^2)))
+forecast_bvhar_v1 <- predict(mod_bvhar_v1, h)
+(msebvhar_v1 <- mse(forecast_bvhar_v1, etf_te))
 ```
 
+
+Minnesota-v2:
+
+```{r}
+day <- rep(.1, ncol(etf_vix))
+week <- rep(.1, ncol(etf_vix))
+month <- rep(.1, ncol(etf_vix))
+#-------------------------------
+mod_bvhar_v2 <- bvhar_minnesota(
+  etf_tr, 
+  type = "VHAR", 
+  sigma = sig, 
+  lambda = lam, 
+  daily = day, 
+  weekly = week, 
+  monthly = month, 
+  eps = eps
+)
+```
+
+```{r}
+forecast_bvhar_v2 <- predict(mod_bvhar_v2, h)
+(msebvhar_v2 <- mse(forecast_bvhar_v2, etf_te))
+```
+
+
 Comparing:
+
+```{r msefig, echo=FALSE}
+list(
+  msevar,
+  msevhar,
+  msebvar,
+  msebvhar_v1,
+  msebvhar_v2
+) %>% 
+  bind_rows() %>% 
+  mutate(Model = c("VAR", "VHAR", "BVAR", "BVHAR_V1", "BVHAR_V2")) %>% 
+  tidyr::pivot_longer(-Model, names_to = "VIX", values_to = "MSE") %>% 
+  ggplot(aes(x = VIX, y = MSE, colour = Model)) +
+  geom_line(aes(group = Model)) +
+  geom_point() +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = -45, vjust = -1))
+```
 
 ```{r}
 # VAR---------------
@@ -137,8 +187,7 @@ mean(msevhar)
 # BVAR--------------
 mean(msebvar)
 # BVHAR-------------
-mean(msebvhar)
+mean(msebvhar_v1)
+mean(msebvhar_v2)
 ```
-
-
 
