--- a/README.Rmd
+++ b/README.Rmd
@@ -9,18 +9,20 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   fig.path = "man/figures/README-",
+  # custom setting-----------------
   out.width = "70%",
   fig.align = "center",
   fig.width = 6,
   fig.asp = .618
 )
+options(digits = 3)
 ```
 
 # bvhar <img src='man/figures/logo.png' align="right" height="139" />
 
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
-[![R-CMD-check](https://github.com/ygeunkim/bvhar/workflows/R-CMD-check/badge.svg)](https://github.com/ygeunkim/bvhar/actions)
+[![R-CMD-check](https://github.com/ygeunkim/bvhar/workflows/R-CMD-check/badge.svg)](https://github.com/ygeunkim/bvhar/actions?workflow=R-CMD-check)
 [![Codecov test coverage](https://codecov.io/gh/ygeunkim/bvhar/branch/master/graph/badge.svg)](https://codecov.io/gh/ygeunkim/bvhar?branch=master)
 <!-- badges: end -->
 
@@ -47,12 +49,24 @@ remotes::install_github("ygeunkim/bvhar")
 ## Usage
 
 ```{r example, message=FALSE}
-library(bvhar)
+library(bvhar) # this package
 library(dplyr)
 library(ggplot2)
 ```
 
-### VAR
+Repeatedly, `bvhar` is a research tool to analyze multivariate time series model above
+
+| Model | function | S3 |  
+|:-----:|:--------:|:--:|  
+| VAR | `var_lm` | `varlse` |  
+| VHAR | `vhar_lm` | `vharlse` |  
+| BVAR | `bvar_minnesota` | `bvarmn` |  
+| BVAR | `bvar_flat` | `bvarghosh` |  
+| BVHAR | `bvhar_minnesota` | `bvharmn` |  
+
+As the other analyzing using S3 such as `lm`, this package use method `coef`, `predict`, etc.
+This readme document shows out-of-sample forecasting briefly.
+Details about each function are in vignettes and help documents.
 
 Out-of-sample forecasting:
 
@@ -65,10 +79,12 @@ etf_tr <-
 etf_te <- setdiff(etf_vix, etf_tr)
 ```
 
-VAR(1):
+### VAR
+
+VAR(5):
 
 ```{r}
-mod_var <- var_lm(etf_tr, 1)
+mod_var <- var_lm(etf_tr, 5)
 ```
 
 Forecasting:
@@ -101,8 +117,8 @@ forecast_vhar <- predict(mod_vhar, h)
 Minnesota prior:
 
 ```{r}
-lam <- .2
-delta <- rep(0, ncol(etf_vix)) # litterman
+lam <- .3
+delta <- rep(1, ncol(etf_vix)) # litterman
 sig <- apply(etf_tr, 2, sd)
 eps <- 1e-04
 ```
