move header includes to vignettes part

--- a/vignettes/bvar.Rmd
+++ b/vignettes/bvar.Rmd
@@ -1,29 +1,28 @@
 ---
 title: "Introduction to BVAR"
 output: rmarkdown::html_vignette
-header-includes:
-- \newcommand{\R}{\mathbb{R}}
-- \newcommand{\B}{\boldsymbol\beta}
-- \newcommand{\hb}{\boldsymbol{\hat\beta}}
-- \newcommand{\E}{\boldsymbol\epsilon}
-- \DeclareMathOperator*{\argmin}{argmin}
-- \DeclareMathOperator*{\argmax}{argmax}
-- \newcommand{\defn}{\mathpunct{:}=}
-- \newcommand{\X}{\mathbf{X}}
-- \newcommand{\Y}{\mathbf{Y}}
-- \newcommand{\by}{\mathbf{y}}
-- \newcommand{\bz}{\mathbf{Z}}
-- \newcommand{\ba}{\boldsymbol{\alpha}}
-- \newcommand{\bc}{\mathbf{c}}
-- \newcommand{\bu}{\mathbf{u}}
-- \def\Cov{\mathrm{Cov}}
-- \def\Var{\mathrm{Var}}
-- \def\Corr{\mathrm{Corr}}
-- \def\vec{\mathrm{vec}}
 vignette: >
   %\VignetteIndexEntry{Introduction to BVAR}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
+  \newcommand{\R}{\mathbb{R}}
+  \newcommand{\B}{\boldsymbol\beta}
+  \newcommand{\hb}{\boldsymbol{\hat\beta}}
+  \newcommand{\E}{\boldsymbol\epsilon}
+  \DeclareMathOperator*{\argmin}{argmin}
+  \DeclareMathOperator*{\argmax}{argmax}
+  \newcommand{\defn}{\mathpunct{:}=}
+  \newcommand{\X}{\mathbf{X}}
+  \newcommand{\Y}{\mathbf{Y}}
+  \newcommand{\by}{\mathbf{y}}
+  \newcommand{\bz}{\mathbf{Z}}
+  \newcommand{\ba}{\boldsymbol{\alpha}}
+  \newcommand{\bc}{\mathbf{c}}
+  \newcommand{\bu}{\mathbf{u}}
+  \def\Cov{\mathrm{Cov}}
+  \def\Var{\mathrm{Var}}
+  \def\Corr{\mathrm{Corr}}
+  \def\vec{\mathrm{vec}}
 ---
 
 ```{r setup, include = FALSE}
@@ -135,7 +134,7 @@ autoplot(fit_bvar, shape = 1, alpha = .5)
 ## Posterior Distribution
 
 ```{r}
-est_bvar <- gen_posterior(fit_bvar, 500)
+(est_bvar <- summary(fit_bvar, 500))
 ```
 
 This generates Normal-IW.
