remove usedynlib from each cpp roxygen documentation

--- a/vignettes/bvar.Rmd
+++ b/vignettes/bvar.Rmd
@@ -1,8 +1,11 @@
 ---
 title: "Introduction to BVAR"
+description: >
+  See how to model BVAR using
+  `bvar_minnesota()` and `bvar_flat().
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Introduction to BVAR}
+  %\VignetteIndexEntry{bvar}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
   \newcommand{\R}{\mathbb{R}}
@@ -36,6 +39,7 @@ knitr::opts_chunk$set(
   fig.pos = "H"
   )
 options(digits = 3)
+options(rmarkdown.html_vignette.check_title = FALSE)
 ```
 
 ```{r pkgs}
