--- a/vignettes/bvhar.Rmd
+++ b/vignettes/bvhar.Rmd
@@ -1,8 +1,11 @@
 ---
 title: "Introduction to BVHAR"
+description: >
+  See how to model BVHAR using
+  `bvhar_minnesota()`.
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Introduction to BVHAR}
+  %\VignetteIndexEntry{bvhar}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
   \newcommand{\R}{\mathbb{R}}
@@ -36,6 +39,7 @@ knitr::opts_chunk$set(
   fig.pos = "H"
   )
 options(digits = 3)
+options(rmarkdown.html_vignette.check_title = FALSE)
 ```
 
 ```{r pkgs}
