--- a/vignettes/var.Rmd
+++ b/vignettes/var.Rmd
@@ -1,8 +1,11 @@
 ---
 title: "VAR and VHAR"
+description: >
+  See how to model VAR and VHAR using
+  `var_lm()` and `vhar_lm(), respectively.
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{VAR and VHAR}
+  %\VignetteIndexEntry{var}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
   \newcommand{\R}{\mathbb{R}}
@@ -36,6 +39,7 @@ knitr::opts_chunk$set(
   fig.pos = "H"
   )
 options(digits = 3)
+options(rmarkdown.html_vignette.check_title = FALSE)
 ```
 
 ```{r pkgs}
