--- a/vignettes/var.Rmd
+++ b/vignettes/var.Rmd
@@ -5,7 +5,7 @@ description: >
   `var_lm()` and `vhar_lm(), respectively.
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{var}
+  %\VignetteIndexEntry{VAR and VHAR}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
   \newcommand{\R}{\mathbb{R}}
@@ -39,7 +39,6 @@ knitr::opts_chunk$set(
   fig.pos = "H"
   )
 options(digits = 3)
-options(rmarkdown.html_vignette.check_title = FALSE)
 ```
 
 ```{r pkgs}
