--- a/vignettes/bvhar.Rmd
+++ b/vignettes/bvhar.Rmd
@@ -1,11 +1,10 @@
 ---
-title: "Introduction to BVHAR"
+title: "Introduction to bvhar"
 description: >
-  See how to model BVHAR using
-  `bvhar_minnesota()`.
+  Brief introduction to the package.
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Introduction to BVHAR}
+  %\VignetteIndexEntry{Introduction to bvhar}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
   \newcommand{\R}{\mathbb{R}}
@@ -50,53 +49,253 @@ library(bvhar)
 library(dplyr)
 ```
 
-# Simple Setting
+# Data
+
+Looking at VAR and VHAR, you can learn how the models work and how to perform this package.
 
 ## ETF Dataset
 
+This package includes some datasets.
+Among them, we try CBOE ETF volatility index (`etf_vix`).
+Since this is just an example, we aribitrarily extract a small number of variables: *Gold, crude oil, euro currency, and china ETF*.
+
 ```{r etfdat}
-etf_vix
-```
-
-Gold, crude oil, euro currency, and china ETF.
-
-```{r etfidx}
 var_idx <- c("GVZCLS", "OVXCLS", "EVZCLS", "VXFXICLS")
-```
-
-Train and test: 19
-
-```{r}
-h <- 19
-#-------------------
 etf <- 
   etf_vix %>% 
   select(all_of(var_idx))
-etf_train <- 
-  etf %>% 
-  slice(seq_len(n() - h))
-#-------------------
-etf_test <- setdiff(etf, etf_train)
-#-------------------
+etf
+```
+
+## Out-of-sample
+
+For out-of-sample forecasting, split the data.
+The last `19` observations will be test set.
+`divide_ts()` function splits the time series into train-test set.
+
+```{r outofsample}
+h <- 19
+etf_eval <- divide_ts(etf, h) # Try ?divide_ts
+etf_train <- etf_eval$train # train
+etf_test <- etf_eval$test # test
+# dimension---------
 m <- ncol(etf)
 ```
 
-# VHAR
+- n: Total number of observation
+- p: VAR lag
+- m: Dimension of variable
+- s = n - p
+- k = m * p + 1 if constant term, k = m * p without constant term
 
-```{r}
-fit_har <- vhar_lm(etf_train)
-pred_har <- predict(fit_har, n.ahead = h)
-mse_har <- mse(pred_har, etf_test)
+# Models
+
+## VAR
+
+This package indentifies VAR(p) model by
+
+$$\Y_t = \bc + B_1 \Y_{t - 1} + \ldots + \B_p +\Y_{t - p} + \E_t$$
+
+where $\E_t \sim N(\mathbf{0}_k, \Sigma_e)$
+
+```{r varlag}
+var_lag <- 5
 ```
 
-# Minnesota Prior
+The package perform VAR(p = `r var_lag`) based on
+
+$$Y_0 = X_0 B + Z$$
+
+where
+
+$$
+Y_0 = \begin{bmatrix}
+  \by_{p + 1}^T \\
+  \by_{p + 2}^T \\
+  \vdots \\
+  \by_n^T
+\end{bmatrix}_{s \times m} \equiv Y_{p + 1} \in \R^{s \times m}
+$$
+
+by `build_y0()`
+
+and
+
+$$
+X_0 = \left[\begin{array}{c|c|c|c}
+  \by_p^T & \cdots & \by_1^T & 1 \\
+  \by_{p + 1}^T & \cdots & \by_2^T & 1 \\
+  \vdots & \vdots & \cdots & \vdots \\
+  \by_{n - 1}^T & \cdots & \by_{n - p}^T & 1
+\end{array}\right]_{s \times k} = \begin{bmatrix}
+  Y_p & Y_{p - 1} & \cdots & \mathbf{1}_{n - p}
+\end{bmatrix} \in \R^{s \times k}
+$$
+
+by `build_design()`. Coefficient matrix is the form of
+
+$$
+B = \begin{bmatrix}
+  B_1^T \\
+  \vdots \\
+  B_p^T \\
+  \bc^T
+\end{bmatrix} \in \R^{k \times m}
+$$
+
+This form also corresponds to the other model.
+Use `var_lm(y, p)` to model VAR(p).
+You can specify `type = "none"` to get model without constant term.
 
 ```{r}
-sig <- apply(etf_train, 2, sd)
-lam <- .2
-delta <- rep(0, m)
-eps <- 1e-04
+(fit_var <- var_lm(etf_train, var_lag))
 ```
+
+The package provide `S3` object.
+
+```{r}
+# class---------------
+class(fit_var)
+# inheritance---------
+is.varlse(fit_var)
+# names---------------
+names(fit_var)
+```
+
+## VHAR
+
+Consider Vector HAR (VHAR) model.
+
+$$\Y_t = \bc + \Phi^{(d)} + \Y_{t - 1} + \Phi^{(w)} \Y_{t - 1}^{(w)} + \Phi^{(m)} \Y_{t - 1}^{(m)} + \E_t$$
+
+where $\Y_t$ is daily RV and
+
+$$\Y_t^{(w)} = \frac{1}{5} \left( \Y_t + \cdots + \Y_{t - 4} \right)$$
+
+is weekly RV
+
+and
+
+$$\Y_t^{(m)} = \frac{1}{22} \left( \Y_t + \cdots + \Y_{t - 21} \right)$$
+
+is monthly RV. This model can be expressed by
+
+$$Y_0 = X_1 \Phi + Z$$
+
+where
+
+$$
+\Phi = \begin{bmatrix}
+  \Phi^{(d)T} \\
+  \Phi^{(w)T} \\
+  \Phi^{(m)T} \\
+  \bc^T
+\end{bmatrix} \in \R^{(3m + 1) \times m}
+$$
+
+Let $T$ be
+
+$$
+T \defn \begin{bmatrix}
+  1 & 0 & \cdots & 0 & 0 & \cdots & 0 \\
+  1 / 5 & 1 / 5 & \cdots & 1 / 5 & 0 & \cdots & 0 \\
+  1 / 22 & 1 / 22 & \cdots & 1 / 22 & 1 / 22 & \cdots & 1 / 22
+\end{bmatrix} \otimes I_m \in \R^{3m \times 22m}
+$$
+
+and let $\widetilde{T}$ be
+
+$$
+\widetilde{T} \defn \left[\begin{array}{c|c}
+  T & \mathbf{0}_{3m} \\ \hline
+  \mathbf{0}_{3m}^T & 1
+\end{array}\right] \in \R^{(3m + 1) \times (22m + 1)}
+$$
+
+Then for $X_0$ in VAR(p),
+
+$$
+X_1 = X_0 \widetilde{T}^T = \begin{bmatrix}
+  \by_{22}^T & \by_{22}^{(w)T} & \by_{22}^{(m)T} & 1 \\
+  \by_{23}^T & \by_{23}^{(w)T} & \by_{23}^{(m)T} & 1 \\
+  \vdots & \vdots & \vdots & \vdots \\
+  \by_{n - 1}^T & \by_{n - 1}^{(w)T} & \by_{n - 1}^{(m)T} & 1
+\end{bmatrix} \in \R^{s \times (3m + 1)}
+$$
+
+This package fits VHAR by scaling VAR(p) using $\widetilde{T}$ (`scale_har(m)`).
+Use `vhar_lm(y)` to fit VHAR.
+You can specify `type = "none"` to get model without constant term.
+
+```{r}
+(fit_har <- vhar_lm(etf_train))
+```
+
+```{r}
+# class----------------
+class(fit_har)
+# inheritance----------
+is.varlse(fit_har)
+is.vharlse(fit_har)
+# complements----------
+names(fit_har)
+```
+
+## BVAR
+
+`bvhar` package provides two prior framework - Minnesota prior and flat prior.
+
+### Minnesota prior
+
+- Litterman (1986) and Bańbura et al. (2010)
+- All the equations are centered around the random walk with drift.
+- *Prior mean*: Recent lags provide more reliable information than the more distant ones.
+- *Prior variance*: Own lags explain more of the variation of a given variable than the lags of other variables in the equation.
+
+`bvar_minnesota(y, p, sigma, lambda, delta, eps = 1e-04)` fits BVAR(p).
+See the Vignettes for BVAR if you want to know the detail of each argument.
+
+```{r minnesotaset}
+bvar_lag <- 5
+sig <- apply(etf_train, 2, sd) # sigma vector
+lam <- .2 # lambda
+delta <- rep(0, m) # delta vector (0 vector since RV stationary)
+eps <- 1e-04 # very small number
+```
+
+```{r bvarfit}
+(fit_bvar <- bvar_minnesota(etf_train, bvar_lag, sig, lam, delta, eps))
+```
+
+```{r}
+# class---------------
+class(fit_bvar)
+# inheritance---------
+is.varlse(fit_bvar)
+# names---------------
+names(fit_bvar)
+```
+
+### Flat prior
+
+Ghosh et al. (2018) provides flat prior for covariance matrix, i.e. non-informative.
+Use `bvar_flat(y, p, U)`.
+
+```{r}
+U <- 5000 * diag(m * bvar_lag + 1) # c * I
+(fit_ghosh <- bvar_flat(etf_train, bvar_lag, U))
+```
+
+```{r}
+# class---------------
+class(fit_ghosh)
+# inheritance---------
+is.varlse(fit_ghosh)
+# names---------------
+names(fit_ghosh)
+```
+
+## BVHAR
 
 Consider the VAR(22) form of VHAR.
 
@@ -115,7 +314,8 @@ What does Minnesota prior mean in VHAR model?
     - $\Phi^{(w)}$ and $\Phi^{(m)}$ to zero
 - WN form: $\delta_i = 0$
 
-Minnesota moment: for more simplicity, write coefficient matrices by $\Phi^{(1)}, \Phi^{(2)}, \Phi^{(3)}$.
+For more simplicity, write coefficient matrices by $\Phi^{(1)}, \Phi^{(2)}, \Phi^{(3)}$.
+If we apply the prior in the same way, Minnesota moment becomes
 
 $$
 E \left[ (\Phi^{(l)})_{ij} \right] = \begin{cases}
@@ -127,41 +327,20 @@ E \left[ (\Phi^{(l)})_{ij} \right] = \begin{cases}
 \end{cases}
 $$
 
+We call this VAR-type Minnesota prior.
+
+### VAR-type Minnesota
+
+`bvhar_minnesota(y, type = "VAR", sigma, lambda, delta, eps = 1e-04)` fits BVHAR with this prior.
+This is the default prior setting.
+
 ```{r}
 (fit_bvhar <- bvhar_minnesota(etf_train, sigma = sig, lambda = lam, delta = delta, eps = eps))
 ```
 
-## Forecasting
+### HAR-type Minnesota
 
-```{r}
-(pred_bvhar <- predict(fit_bvhar, h))
-class(pred_bvhar)
-names(pred_bvhar)
-```
-
-```{r}
-autoplot(pred_bvhar, x_cut = 500)
-```
-
-MSE:
-
-```{r}
-(mse_bvhar <- mse(pred_bvhar, etf_test))
-```
-
-Compare:
-
-```{r}
-# VHAR-------------
-mean(mse_har)
-# BVHAR------------
-mean(mse_bvhar)
-```
-
-
-# Other Prior
-
-Set $\delta_i$ for weekly and monthly coefficient matrices:
+Set $\delta_i$ for weekly and monthly coefficient matrices in above Minnesota moments:
 
 $$
 E \left[ (\Phi^{(l)})_{ij} \right] = \begin{cases}
@@ -176,8 +355,6 @@ i.e. instead of one `delta` vector, set three vector
 - `daily`
 - `weekly`
 - `monthly`
-
-## Fit
 
 You can use this prior in the same function (`bvhar_minnesota()`) with `type = "VHAR"`. (cf. In the case of the default Minnesota, it is `type = "VAR"`.)
 
@@ -201,31 +378,6 @@ fit_bvhar_other <- bvhar_minnesota(
   monthly = monthly, 
   eps = eps
 )
-```
-
-## Forecast
-
-```{r}
-(pred_bvhar_other <- predict(fit_bvhar_other, h))
-```
-
-```{r}
-autoplot(pred_bvhar_other, x_cut = 500)
-```
-
-MSE:
-
-```{r}
-(mse_bvhar_other <- mse(pred_bvhar_other, etf_test))
-```
-
-Compare:
-
-```{r}
-# Original Minnesota----------------------
-mse_bvhar
-mean(mse_bvhar)
-# New Minnesota---------------------------
-mean(mse_bvhar_other)
+fit_bvhar_other
 ```
 
